src/ANTLR4/miniJavaParser.java
// Generated from miniJava.g4 by ANTLR 4.4

    package ANTLR4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miniJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, INSTANCEOF=2, CLASS=3, ELSE=4, EXTENDS=5, IF=6, INT=7, NEW=8, 
		PUBLIC=9, RETURN=10, STATIC=11, THIS=12, VOID=13, WHILE=14, MAIN=15, STRING=16, 
		SOP=17, LENGTH=18, COEFCLASS=19, COEFSUBCLASS=20, DECIMAL_LITERAL=21, 
		BOOL_LITERAL=22, LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, LBRACK=27, 
		RBRACK=28, SEMI=29, COMMA=30, DOT=31, ASSIGN=32, GT=33, LT=34, AND=35, 
		OR=36, BANG=37, ADD=38, SUB=39, MUL=40, DIV=41, DQ=42, WS=43, COMMENT=44, 
		LINE_COMMENT=45, IDENTIFIER=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'boolean'", "'instanceof'", "'class'", "'else'", "'extends'", 
		"'if'", "'int'", "'new'", "'public'", "'return'", "'static'", "'this'", 
		"'void'", "'while'", "'main'", "'String'", "'System.out.println'", "'lenght'", 
		"'@CoeffectClass'", "'@CoeffectSubClass'", "DECIMAL_LITERAL", "BOOL_LITERAL", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='", 
		"'>'", "'<'", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", "'\"'", 
		"WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER"
	};
	public static final int
		RULE_program = 0, RULE_mainClass = 1, RULE_classDecl = 2, RULE_coefClass = 3, 
		RULE_varDecl = 4, RULE_varDeclp = 5, RULE_methodDecl = 6, RULE_type = 7, 
		RULE_statement = 8, RULE_exp = 9;
	public static final String[] ruleNames = {
		"program", "mainClass", "classDecl", "coefClass", "varDecl", "varDeclp", 
		"methodDecl", "type", "statement", "exp"
	};

	@Override
	public String getGrammarFileName() { return "miniJava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20); mainClass();
			setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << COEFCLASS) | (1L << COEFSUBCLASS))) != 0)) {
				{
				{
				setState(21); classDecl();
				}
				}
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode SOP() { return getToken(miniJavaParser.SOP, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(miniJavaParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(miniJavaParser.LBRACE, i);
		}
		public TerminalNode STRING() { return getToken(miniJavaParser.STRING, 0); }
		public List<TerminalNode> RPAREN() { return getTokens(miniJavaParser.RPAREN); }
		public TerminalNode RBRACK() { return getToken(miniJavaParser.RBRACK, 0); }
		public TerminalNode LBRACK() { return getToken(miniJavaParser.LBRACK, 0); }
		public TerminalNode MAIN() { return getToken(miniJavaParser.MAIN, 0); }
		public TerminalNode RBRACE(int i) {
			return getToken(miniJavaParser.RBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(miniJavaParser.RBRACE); }
		public TerminalNode STATIC() { return getToken(miniJavaParser.STATIC, 0); }
		public TerminalNode RPAREN(int i) {
			return getToken(miniJavaParser.RPAREN, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(miniJavaParser.LPAREN); }
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public TerminalNode VOID() { return getToken(miniJavaParser.VOID, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(miniJavaParser.IDENTIFIER, i);
		}
		public TerminalNode PUBLIC() { return getToken(miniJavaParser.PUBLIC, 0); }
		public TerminalNode CLASS() { return getToken(miniJavaParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(miniJavaParser.IDENTIFIER); }
		public TerminalNode LPAREN(int i) {
			return getToken(miniJavaParser.LPAREN, i);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); match(CLASS);
			setState(28); match(IDENTIFIER);
			setState(29); match(LBRACE);
			setState(30); match(PUBLIC);
			setState(31); match(STATIC);
			setState(32); match(VOID);
			setState(33); match(MAIN);
			setState(34); match(LPAREN);
			setState(35); match(STRING);
			setState(36); match(LBRACK);
			setState(37); match(RBRACK);
			setState(38); match(IDENTIFIER);
			setState(39); match(RPAREN);
			setState(40); match(LBRACE);
			setState(41); match(SOP);
			setState(42); match(LPAREN);
			setState(43); exp(0);
			setState(44); match(RPAREN);
			setState(45); match(SEMI);
			setState(46); match(RBRACE);
			setState(47); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public CoefClassContext coefClass() {
			return getRuleContext(CoefClassContext.class,0);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public TerminalNode RBRACE() { return getToken(miniJavaParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(miniJavaParser.LBRACE, 0); }
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(miniJavaParser.IDENTIFIER, i);
		}
		public TerminalNode CLASS() { return getToken(miniJavaParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(miniJavaParser.IDENTIFIER); }
		public TerminalNode EXTENDS() { return getToken(miniJavaParser.EXTENDS, 0); }
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if (_la==COEFCLASS || _la==COEFSUBCLASS) {
				{
				setState(49); coefClass();
				}
			}

			setState(52); match(CLASS);
			setState(53); match(IDENTIFIER);
			setState(56);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(54); match(EXTENDS);
				setState(55); match(IDENTIFIER);
				}
			}

			setState(58); match(LBRACE);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(59); varDecl();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUBLIC) {
				{
				{
				setState(65); methodDecl();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoefClassContext extends ParserRuleContext {
		public TerminalNode DQ(int i) {
			return getToken(miniJavaParser.DQ, i);
		}
		public List<TerminalNode> DQ() { return getTokens(miniJavaParser.DQ); }
		public TerminalNode COEFCLASS() { return getToken(miniJavaParser.COEFCLASS, 0); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public TerminalNode COEFSUBCLASS() { return getToken(miniJavaParser.COEFSUBCLASS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public CoefClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coefClass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitCoefClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoefClassContext coefClass() throws RecognitionException {
		CoefClassContext _localctx = new CoefClassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_coefClass);
		try {
			setState(80);
			switch (_input.LA(1)) {
			case COEFCLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(73); match(COEFCLASS);
				}
				break;
			case COEFSUBCLASS:
				enterOuterAlt(_localctx, 2);
				{
				setState(74); match(COEFSUBCLASS);
				setState(75); match(LPAREN);
				setState(76); match(DQ);
				setState(77); match(IDENTIFIER);
				setState(78); match(DQ);
				setState(79); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); type();
			setState(83); match(IDENTIFIER);
			setState(84); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclpContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public VarDeclpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitVarDeclp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclpContext varDeclp() throws RecognitionException {
		VarDeclpContext _localctx = new VarDeclpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); type();
			setState(87); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public VarDeclpContext varDeclp(int i) {
			return getRuleContext(VarDeclpContext.class,i);
		}
		public TerminalNode LBRACE() { return getToken(miniJavaParser.LBRACE, 0); }
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<VarDeclpContext> varDeclp() {
			return getRuleContexts(VarDeclpContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(miniJavaParser.COMMA, i);
		}
		public TerminalNode RETURN() { return getToken(miniJavaParser.RETURN, 0); }
		public TerminalNode RBRACE() { return getToken(miniJavaParser.RBRACE, 0); }
		public TerminalNode STATIC() { return getToken(miniJavaParser.STATIC, 0); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(miniJavaParser.COMMA); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public TerminalNode PUBLIC() { return getToken(miniJavaParser.PUBLIC, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89); match(PUBLIC);
			setState(91);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(90); match(STATIC);
				}
			}

			setState(93); type();
			setState(94); match(IDENTIFIER);
			setState(95); match(LPAREN);
			setState(104);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(96); varDeclp();
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(97); match(COMMA);
					setState(98); varDeclp();
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(106); match(RPAREN);
			setState(107); match(LBRACE);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108); varDecl();
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SOP) | (1L << LBRACE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(114); statement();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120); match(RETURN);
			setState(121); exp(0);
			setState(122); match(SEMI);
			setState(123); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode RBRACK() { return getToken(miniJavaParser.RBRACK, 0); }
		public TerminalNode BOOLEAN() { return getToken(miniJavaParser.BOOLEAN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public TerminalNode INT() { return getToken(miniJavaParser.INT, 0); }
		public TerminalNode LBRACK() { return getToken(miniJavaParser.LBRACK, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125); match(IDENTIFIER);
				setState(126); match(LBRACK);
				setState(127); match(RBRACK);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128); match(BOOLEAN);
				setState(129); match(LBRACK);
				setState(130); match(RBRACK);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131); match(INT);
				setState(132); match(LBRACK);
				setState(133); match(RBRACK);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134); match(BOOLEAN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(135); match(INT);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(136); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode ELSE() { return getToken(miniJavaParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(miniJavaParser.IF, 0); }
		public TerminalNode SOP() { return getToken(miniJavaParser.SOP, 0); }
		public TerminalNode LBRACE() { return getToken(miniJavaParser.LBRACE, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public TerminalNode RBRACK() { return getToken(miniJavaParser.RBRACK, 0); }
		public TerminalNode WHILE() { return getToken(miniJavaParser.WHILE, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode LBRACK() { return getToken(miniJavaParser.LBRACK, 0); }
		public TerminalNode ASSIGN() { return getToken(miniJavaParser.ASSIGN, 0); }
		public TerminalNode RBRACE() { return getToken(miniJavaParser.RBRACE, 0); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement);
		int _la;
		try {
			setState(180);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139); match(LBRACE);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SOP) | (1L << LBRACE) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(140); statement();
					}
					}
					setState(145);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(146); match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147); match(IF);
				setState(148); match(LPAREN);
				setState(149); exp(0);
				setState(150); match(RPAREN);
				setState(151); statement();
				setState(152); match(ELSE);
				setState(153); statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155); match(WHILE);
				setState(156); match(LPAREN);
				setState(157); exp(0);
				setState(158); match(RPAREN);
				setState(159); statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(161); match(SOP);
				setState(162); match(LPAREN);
				setState(163); exp(0);
				setState(164); match(RPAREN);
				setState(165); match(SEMI);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(167); match(IDENTIFIER);
				setState(168); match(ASSIGN);
				setState(169); exp(0);
				setState(170); match(SEMI);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(172); match(IDENTIFIER);
				setState(173); match(LBRACK);
				setState(174); exp(0);
				setState(175); match(RBRACK);
				setState(176); match(ASSIGN);
				setState(177); exp(0);
				setState(178); match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode RBRACK() { return getToken(miniJavaParser.RBRACK, 0); }
		public TerminalNode INT() { return getToken(miniJavaParser.INT, 0); }
		public TerminalNode LBRACK() { return getToken(miniJavaParser.LBRACK, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(miniJavaParser.COMMA, i);
		}
		public TerminalNode MUL() { return getToken(miniJavaParser.MUL, 0); }
		public TerminalNode DOT() { return getToken(miniJavaParser.DOT, 0); }
		public TerminalNode BOOL_LITERAL() { return getToken(miniJavaParser.BOOL_LITERAL, 0); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(miniJavaParser.COMMA); }
		public TerminalNode ADD() { return getToken(miniJavaParser.ADD, 0); }
		public TerminalNode AND() { return getToken(miniJavaParser.AND, 0); }
		public TerminalNode DIV() { return getToken(miniJavaParser.DIV, 0); }
		public TerminalNode LENGTH() { return getToken(miniJavaParser.LENGTH, 0); }
		public TerminalNode DECIMAL_LITERAL() { return getToken(miniJavaParser.DECIMAL_LITERAL, 0); }
		public TerminalNode SUB() { return getToken(miniJavaParser.SUB, 0); }
		public TerminalNode LT() { return getToken(miniJavaParser.LT, 0); }
		public TerminalNode GT() { return getToken(miniJavaParser.GT, 0); }
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public TerminalNode BOOLEAN() { return getToken(miniJavaParser.BOOLEAN, 0); }
		public TerminalNode THIS() { return getToken(miniJavaParser.THIS, 0); }
		public TerminalNode OR() { return getToken(miniJavaParser.OR, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode NEW() { return getToken(miniJavaParser.NEW, 0); }
		public TerminalNode INSTANCEOF() { return getToken(miniJavaParser.INSTANCEOF, 0); }
		public TerminalNode ASSIGN() { return getToken(miniJavaParser.ASSIGN, 0); }
